# ants

./: .gitignore  Cargo.toml  README.md
src/: ant.rs  food.rs  game.rs  main.rs  pheromones.rs
src/components/: ant.rs  carrying_food.rs  direction.rs  food.rs  mod.rs  position.rs  reset_lifetime.rs
src/systems/: ant_goal_system.rs  ant_lifetime_reset_system.rs  ant_rebirth_system.rs  follow_pheromone_system.rs  mod.rs  print_position_system.rs  setup_pheromone_texture.rs
src/utils/: geometry.rs
